--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <title>Kevin O'Donnell - Biomedical Engineer</title>
+  <title>Kevin O'Donnell</title>
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <header>
