--- a/about.html
+++ b/about.html
@@ -61,12 +61,12 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="Resume.html">Resume</a></li>
-        <li><a href="Projects.html">Projects</a></li>
-        <li><a href="Reading.html">Reading List</a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./about">About</a></li>
+        <li><a href="./Resume">Resume</a></li>
+        <li><a href="./Projects">Projects</a></li>
+        <li><a href="./Reading">Reading List</a></li>
+        <li><a href="./Contact">Contact</a></li>
       </ul>
     </nav>
   </header>
