--- a/Reading.html
+++ b/Reading.html
@@ -63,12 +63,12 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="resume.html">Resume</a></li>
-        <li><a href="Projects.html">Projects</a></li>
-        <li><a href="#">Reading List</a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="./">Home</a></li>
+        <li><a href="./about">About</a></li>
+        <li><a href="./Resume">Resume</a></li>
+        <li><a href="./Projects">Projects</a></li>
+        <li><a href="./Reading">Reading List</a></li>
+        <li><a href="./Contact">Contact</a></li>
       </ul>
     </nav>
   </header>
