--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <title>About Kevin O'Donnell</title>
+  <title>Kevin O'Donnell - About</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
       font-family: 'Arial', sans-serif;
