--- a/Reading.html
+++ b/Reading.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <title>Reading List - Kevin O'Donnell</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     .reading-list {
       display: flex;
