--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <title>Contact - Kevin O'Donnell</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
       background: url('Project%20Media/mountain.png') no-repeat center center fixed;
