--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
-      background: url('Project%20Media/mountain.png') no-repeat center center fixed;
+      background: url('Project%20Media/mountain.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
