--- a/Reading.html
+++ b/Reading.html
@@ -82,7 +82,7 @@
           <li><strong>1984</strong> <em>George Orwell</em></li>
           <li><strong>Fight Club</strong> <em>Chuck Palahniuk</em></li>
           <li><strong>The Little Prince</strong> <em>Antoine de Saint-Exupery</em></li>
-          <li><strong>Animal Farm</strong> <em>George Orwell</em></li>
+          <li><strong>The Alchemist</strong> <em>Paulo Coelho</em></li>
           <li><strong>Life of Pi</strong> <em>Yann Martel</em></li>
           <li><strong>A Wrinkle in Time</strong> <em>Madeleine L’Engle</em></li>
         </ul>
