--- a/Projects.html
+++ b/Projects.html
@@ -131,7 +131,7 @@
       <div class="project-box">
         <div class="project-title">StarWalker - Bipedal Robot</div>
         <div class="project-media">
-          <iframe src="https://youtu.be/rTbn90tQsiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="www.youtube.com/embed/rTbn90tQsiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="project-date">Spring 2024</div>
         <div class="project-description">A bipedal fire-shooting robot designed and built for Columbia University Robotics Studio.</div>
