--- a/Projects.html
+++ b/Projects.html
@@ -140,6 +140,20 @@
 
       <!-- Project 2 -->
       <div class="project-box">
+        <div class="project-title">Web Scraping Medical Device Landscape</div>
+        <div class="project-media">
+          <iframe src="https://www.youtube.com/embed/eOXqpZWYNCQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="project-date">Summer 2024</div>
+        <div class="project-description">
+        This Python-based application is designed to provide comprehensive insights into the medical device industry by accessing and analyzing data from various FDA databases. The application uses powerful, automated web scraping tools like Selenium and BeautifulSoup to extract detailed information on product problems, patient issues, company landscapes, and device-specific data.<br><br>
+        The data is processed and visualized through dynamic plots and tables within a user-friendly Tkinter interface. This tool offers healthcare professionals, researchers, and industry stakeholders a clear and detailed view of the medical device landscape, facilitating informed decision-making and broad root-cause analysis.
+        </div>
+        <div class="project-skills">Skills: Python (Tkinter, Selenium, BeautifulSoup, Pandas, Matplotlib, Threading)</div>
+      </div>
+
+      <!-- Project 3 -->
+      <div class="project-box">
         <div class="project-title">UCLA Honors Physiology Research</div>
         <div class="project-media">
           <img src="Project%20Media/Poster.png" alt="Project Image">
@@ -152,7 +166,7 @@
         <div class="project-skills">Skills: R&D</div>
       </div>
 
-      <!-- Project 3 -->
+      <!-- Project 4 -->
       <div class="project-box">
         <div class="project-title">Endotracheal Intubation Ideation</div>
         <div class="project-media">
@@ -163,7 +177,7 @@
         <div class="project-skills">Skills: R&D</div>
       </div>
 
-      <!-- Project 4 -->
+      <!-- Project 5 -->
       <div class="project-box">
         <div class="project-title">3D Printer Build</div>
         <div class="project-media">
@@ -174,7 +188,7 @@
         <div class="project-skills">Skills: 3D printing, Electronics</div>
       </div>
 
-      <!-- Project 5 -->
+      <!-- Project 6 -->
       <div class="project-box">
         <div class="project-title">UCLA Bruin Young Tech Professionals Bootcamp</div>
         <div class="project-media">
@@ -185,7 +199,7 @@
         <div class="project-skills">Skills: R&D</div>
       </div>
 
-      <!-- Project 6 -->
+      <!-- Project 7 -->
       <div class="project-box">
         <div class="project-title">Columbia Mechatronics Class</div>
         <div class="project-media">
@@ -196,7 +210,7 @@
         <div class="project-skills">Skills: Robotics, Electronics, C++</div>
       </div>
 
-      <!-- Project 7 -->
+      <!-- Project 8 -->
       <div class="project-box">
         <div class="project-title">Columbia Computational Physiology Class</div>
         <div class="project-media">
@@ -207,7 +221,7 @@
         <div class="project-skills">Skills: Matlab, Python</div>
       </div>
 
-      <!-- Project 8 -->
+      <!-- Project 9 -->
       <div class="project-box">
         <div class="project-title">Retinal Microneedle Commercialization Plan</div>
         <div class="project-media">
@@ -218,7 +232,7 @@
         <div class="project-skills">Skills: R&D</div>
       </div>
 
-      <!-- Project 9 -->
+      <!-- Project 10 -->
       <div class="project-box">
         <div class="project-title">3D-printed Vinyl Shelves</div>
         <div class="project-media">
@@ -229,7 +243,7 @@
         <div class="project-skills">Skills: 3D printing, CAD</div>
       </div>
 
-      <!-- Project 10 -->
+      <!-- Project 11 -->
       <div class="project-box">
           <div class="project-title">Noble Ninja App</div>
           <div class="project-media">
@@ -240,7 +254,7 @@
           <div class="project-skills">Skills: Swift</div>
       </div>
 
-      <!-- Project 11 -->
+      <!-- Project 12 -->
       <div class="project-box">
         <div class="project-title">‘Believe’ Stitch Pattern</div>
         <div class="project-media">
@@ -251,7 +265,7 @@
         <div class="project-skills">Skills: Electronics, Matlab</div>
       </div>
 
-      <!-- Project 12 -->
+      <!-- Project 13 -->
       <div class="project-box">
         <div class="project-title">Desk and Chair Topology Optimization</div>
         <div class="project-media">
@@ -262,7 +276,7 @@
         <div class="project-skills">Skills: CAD</div>
       </div>
 
-      <!-- Project 13 -->
+      <!-- Project 14 -->
       <div class="project-box">
         <div class="project-title">Laser Cut Desk Organizer</div>
         <div class="project-media">
