--- a/Projects.html
+++ b/Projects.html
@@ -142,7 +142,7 @@
       <div class="project-box">
         <div class="project-title">Web Scraping Medical Device Landscape</div>
         <div class="project-media">
-          <iframe src="https://www.youtube.com/embed/eOXqpZWYNCQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/hf28GGe1oZs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="project-date">Summer 2024</div>
         <div class="project-description">
