--- a/Projects.html
+++ b/Projects.html
@@ -177,6 +177,41 @@
         <div class="project-skills">Skills: R&D</div>
       </div>
 
+      <!-- New Project Fall 2024 -->
+      <div class="project-box">
+        <div class="project-title">Polypharmacy Adverse Event Risk Model</div>
+        <div class="project-media">
+            <img src="Project%20Media/Drug.png" alt="Project Image">
+        </div>
+        <div class="project-date">Fall 2024</div>
+        <div class="project-description">
+            This project predicts multi-class adverse events caused by Drug-Drug Interactions (DDIs) using a gradient boosting decision tree model. 
+            CatBoost was selected for its ability to handle categorical pharmacological data and its interpretability through feature importance analysis and SHAP values.  
+            The model, trained with stratified 5-fold cross-validation on the DS1 dataset, aligns with benchmark results from the 
+            <a href="https://arxiv.org/abs/2406.00118" target="_blank">ADEP paper</a>.  
+            Further work has included integrating real-time pharmacological data from three APIs and five datasets for improved accuracy while leveraging SHAP values for instance-level explanations 
+            (i.e. input: list of drugs; output: ‘30% risk of liver toxicity due to shared target pathway’).
+        </div>
+        <div class="project-skills">Skills: Python</div>
+      </div>
+
+      <!-- New Project Winter 2025 -->
+      <div class="project-box">
+        <div class="project-title">3D Printed Dremel CNC/Laser Engraver</div>
+        <div class="project-media">
+            <img src="Project%20Media/CNC.JPG" alt="Project Image">
+        </div>
+        <div class="project-date">Winter 2025</div>
+        <div class="project-description">
+            This garage-built CNC machine is based on the tutorial 
+            <a href="https://www.instructables.com/DIY-3D-Printed-Dremel-CNC/" target="_blank">
+                DIY 3D-Printed Dremel CNC
+            </a>, but has been expanded for larger dimensions. 
+            Additionally, the machine head was designed to be modular, allowing for both CNC milling and laser engraving.
+        </div>
+        <div class="project-skills">Skills: 3D printing, Robotics, CAD/CAM, Electronics</div>
+      </div>
+
       <!-- Project 5 -->
       <div class="project-box">
         <div class="project-title">3D Printer Build</div>
