--- a/Projects.html
+++ b/Projects.html
@@ -207,7 +207,7 @@
             <a href="https://www.instructables.com/DIY-3D-Printed-Dremel-CNC/" target="_blank">
                 DIY 3D-Printed Dremel CNC
             </a>, but has been expanded for larger dimensions. 
-            Additionally, the machine head was designed to be modular, allowing for both CNC milling and laser engraving.
+            Additionally, the machine head was designed to be modular, allowing for both CNC milling and laser engraving. It is controlled by an Arduino Uno running GRBL 1.1 firmware, with UGS as the G-code sender for CNC operations and LightBurn for laser engraving.
         </div>
         <div class="project-skills">Skills: 3D printing, Robotics, CAD/CAM, Electronics</div>
       </div>
