--- a/Projects.html
+++ b/Projects.html
@@ -154,22 +154,22 @@
 
       <!-- New Project Spring 2025 -->
       <div class="project-box">
-        <div class="project-title">Cardiovascular Disease Prediction AI Classification</div>
-        <div class="project-media">
-          <img src="Project%20Media/HeartDiseaseModelResults.svg" alt="Model Results Table">
-          <object data="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" type="application/pdf" width="100%" height="500px">
-            <p>It appears you don't have a PDF plugin for this browser. You can <a href="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf">click here to download the PDF file.</a></p>
-          </object>
-        </div>
-        <div class="project-date">Spring 2025</div>
-        <div class="project-description">
-          This project applies supervised machine learning to predict the presence of cardiovascular disease using clinical data from 
-          <a href="https://www.kaggle.com/datasets/fedesoriano/heart-failure-prediction" target="_blank" rel="noopener noreferrer">918 patients</a>.
-          Logistic Regression, K-Nearest Neighbors, Gradient Boosted Classifier, XGBoost, and a stacked ensemble were explored, with the top models achieving up to 95% ROC AUC on the test set. 
-          The full report details each step—from preprocessing and calibration to fairness auditing and subgroup threshold tuning—used to build the optimal and ethical models.
-        </div>
-        <div class="project-skills">Python (Scikit-learn, Machine Learning, Data Preprocessing, Fairness & Bias Auditing, Hyperparameter Tuning (Optuna), Model Calibration, Threshold Optimization, SHAP Explainability, Visualization (Matplotlib), Reproducibility (Joblib, Pipeline Design))
-        </div>
+          <div class="project-title">Cardiovascular Disease Prediction AI Classification</div>
+          <div class="project-media">
+              <img src="Project%20Media/HeartDiseaseModelResults.svg" alt="Model Results Table">
+              <a href="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" target="_blank" class="pdf-download-link">
+                View Full Report (PDF)
+              </a>
+          </div>
+          <div class="project-date">Spring 2025</div>
+          <div class="project-description">
+              This project applies supervised machine learning to predict the presence of cardiovascular disease using clinical data from 
+              <a href="https://www.kaggle.com/datasets/fedesoriano/heart-failure-prediction" target="_blank" rel="noopener noreferrer">918 patients</a>.
+              Logistic Regression, K-Nearest Neighbors, Gradient Boosted Classifier, XGBoost, and a stacked ensemble were explored, with the top models achieving up to 95% ROC AUC on the test set. 
+              The full report details each step—from preprocessing and calibration to fairness auditing and subgroup threshold tuning—used to build the optimal and ethical models.
+          </div>
+          <div class="project-skills">Python (Scikit-learn, Machine Learning, Data Preprocessing, Fairness & Bias Auditing, Hyperparameter Tuning (Optuna), Model Calibration, Threshold Optimization, SHAP Explainability, Visualization (Matplotlib), Reproducibility (Joblib, Pipeline Design))
+          </div>
       </div>
         
       <!-- Project 3 -->
