--- a/Projects.html
+++ b/Projects.html
@@ -156,15 +156,26 @@
       <div class="project-box">
         <div class="project-title">Cardiovascular Disease Prediction AI Classification</div>
         <div class="project-media">
+          <!-- First: display image (auto-zooms via your existing JS/CSS) -->
+          <img src="Project%20Media/HeartDiseaseModelResults.svg" alt="Model Results Table">
+          <!-- Then: display embedded PDF preview -->
           <a href="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" target="_blank" rel="noopener noreferrer">
-            <img src="Project%20Media/HeartDiseaseModelResults.svg" alt="Model Results Table">
+            <object data="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" type="application/pdf" width="100%" height="500px">
+              <p>
+                It appears you don't have a PDF plugin for this browser. You can
+                <strong><u>click here</u></strong> to view the full report in a new tab:
+                <a href="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" target="_blank" rel="noopener noreferrer">
+                  HeartFailurePredictionSupervisedLearningReport.pdf
+                </a>
+              </p>
+            </object>
           </a>
         </div>
         <div class="project-date">Spring 2025</div>
         <div class="project-description">
           This project applies supervised machine learning to predict the presence of cardiovascular disease using clinical data from 
           <a href="https://www.kaggle.com/datasets/fedesoriano/heart-failure-prediction" target="_blank" rel="noopener noreferrer">918 patients</a>.
-          Logistic Regression, K-Nearest Neighbors, Gradient Boosted Classifier, XGBoost, and a stacked ensemble were explored, with the top models achieving up to 95% ROC AUC on the test set. 
+          Logistic Regression, K-Nearest Neighbors, Gradient Boosted Classifier, XGBoost, and a stacked ensemble were explored, with the top models achieving up to 95% ROC AUC on the test set.
           The full report details each step—from preprocessing and calibration to fairness auditing and subgroup threshold tuning—used to build the optimal and ethical models.
         </div>
         <div class="project-skills">
@@ -176,13 +187,26 @@
       <div class="project-box">
         <div class="project-title">UCLA Honors Physiology Research</div>
         <div class="project-media">
-          <img src="Project%20Media/Poster.png" alt="Project Image">
-          <object data="Project%20Media/Research.pdf" type="application/pdf" width="100%" height="500px">
-            <p>It appears you don't have a PDF plugin for this browser. You can <a href="Project%20Media/Research.pdf">click here to download the PDF file.</a></p>
-          </object>
+          <!-- Image (zoom-enabled via your existing CSS/JS) -->
+          <img src="Project%20Media/Poster.png" alt="Project Poster">
+          <!-- PDF Preview + Link -->
+          <a href="Project%20Media/Research.pdf" target="_blank" rel="noopener noreferrer">
+            <object data="Project%20Media/Research.pdf" type="application/pdf" width="100%" height="500px">
+              <p>
+                It appears you don't have a PDF plugin for this browser. You can
+                <strong><u>click here</u></strong> to view the full report in a new tab:
+                <a href="Project%20Media/Research.pdf" target="_blank" rel="noopener noreferrer">
+                  Research.pdf
+                </a>
+              </p>
+            </object>
+          </a>
         </div>
         <div class="project-date">Spring 2022</div>
-        <div class="project-description">Led a psychiatry-independent research experiment on sex-divergent and genotypic effects during neurodevelopment on Bloc-1 deficient Pallid mice. Responsible for all sides of the project from behavioral experimentation to data analysis to scientific writing.</div>
+        <div class="project-description">
+          Led a psychiatry-independent research experiment on sex-divergent and genotypic effects during neurodevelopment on Bloc-1 deficient Pallid mice. 
+          Responsible for all sides of the project from behavioral experimentation to data analysis to scientific writing.
+        </div>
         <div class="project-skills">Skills: R&D</div>
       </div>
 
