--- a/Projects.html
+++ b/Projects.html
@@ -156,20 +156,20 @@
       <div class="project-box">
         <div class="project-title">Cardiovascular Disease Prediction AI Classification</div>
         <div class="project-media">
-          <!-- First: display image (auto-zooms via your existing JS/CSS) -->
           <img src="Project%20Media/HeartDiseaseModelResults.svg" alt="Model Results Table">
-          <!-- Then: display embedded PDF preview -->
-          <a href="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" target="_blank" rel="noopener noreferrer">
-            <object data="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" type="application/pdf" width="100%" height="500px">
-              <p>
-                It appears you don't have a PDF plugin for this browser. You can
-                <strong><u>click here</u></strong> to view the full report in a new tab:
-                <a href="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" target="_blank" rel="noopener noreferrer">
-                  HeartFailurePredictionSupervisedLearningReport.pdf
-                </a>
-              </p>
-            </object>
-          </a>
+          <object data="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" type="application/pdf" width="100%" height="500px">
+            <p>
+              It appears you don't have a PDF plugin for this browser. You can
+              <a href="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" target="_blank" rel="noopener noreferrer">click here to download the PDF file.</a>
+            </p>
+          </object>
+          <div style="text-align: center; margin-top: 10px;">
+            <a href="Project%20Media/HeartFailurePredictionSupervisedLearningReport.pdf" target="_blank" rel="noopener noreferrer">
+              <button style="padding: 10px 20px; font-size: 1rem; background-color: #ff7e5f; color: white; border: none; border-radius: 5px; cursor: pointer;">
+                Open PDF in New Tab
+              </button>
+            </a>
+          </div>
         </div>
         <div class="project-date">Spring 2025</div>
         <div class="project-description">
@@ -182,25 +182,26 @@
           Python (Scikit-learn, Machine Learning, Data Preprocessing, Fairness & Bias Auditing, Hyperparameter Tuning (Optuna), Model Calibration, Threshold Optimization, SHAP Explainability, Visualization (Matplotlib), Reproducibility (Joblib, Pipeline Design))
         </div>
       </div>
-        
+     
+
       <!-- Project 3 -->
       <div class="project-box">
         <div class="project-title">UCLA Honors Physiology Research</div>
         <div class="project-media">
-          <!-- Image (zoom-enabled via your existing CSS/JS) -->
           <img src="Project%20Media/Poster.png" alt="Project Poster">
-          <!-- PDF Preview + Link -->
-          <a href="Project%20Media/Research.pdf" target="_blank" rel="noopener noreferrer">
-            <object data="Project%20Media/Research.pdf" type="application/pdf" width="100%" height="500px">
-              <p>
-                It appears you don't have a PDF plugin for this browser. You can
-                <strong><u>click here</u></strong> to view the full report in a new tab:
-                <a href="Project%20Media/Research.pdf" target="_blank" rel="noopener noreferrer">
-                  Research.pdf
-                </a>
-              </p>
-            </object>
-          </a>
+          <object data="Project%20Media/Research.pdf" type="application/pdf" width="100%" height="500px">
+            <p>
+              It appears you don't have a PDF plugin for this browser. You can
+              <a href="Project%20Media/Research.pdf" target="_blank" rel="noopener noreferrer">click here to download the PDF file.</a>
+            </p>
+          </object>
+          <div style="text-align: center; margin-top: 10px;">
+            <a href="Project%20Media/Research.pdf" target="_blank" rel="noopener noreferrer">
+              <button style="padding: 10px 20px; font-size: 1rem; background-color: #ff7e5f; color: white; border: none; border-radius: 5px; cursor: pointer;">
+                Open PDF in New Tab
+              </button>
+            </a>
+          </div>
         </div>
         <div class="project-date">Spring 2022</div>
         <div class="project-description">
