--- a/Projects.html
+++ b/Projects.html
@@ -152,7 +152,7 @@
         <div class="project-skills">Skills: Python (Tkinter, Selenium, BeautifulSoup, Pandas, Matplotlib, Threading)</div>
       </div>
 
-      <!-- New Project Spring 2025 -->
+      <!-- New Project Winter 2025 -->
       <div class="project-box">
         <div class="project-title">Cardiovascular Disease Prediction AI Classification</div>
         <div class="project-media">
@@ -171,7 +171,7 @@
             </a>
           </div>
         </div>
-        <div class="project-date">Spring 2025</div>
+        <div class="project-date">Winter 2025</div>
         <div class="project-description">
           This project applies supervised machine learning to predict the presence of cardiovascular disease using clinical data from 
           <a href="https://www.kaggle.com/datasets/fedesoriano/heart-failure-prediction" target="_blank" rel="noopener noreferrer">918 patients</a>.
@@ -220,6 +220,28 @@
         <div class="project-date">Fall 2022</div>
         <div class="project-description">Designed a novel Endotracheal Intubation biomedical device in Columbia Biomedical Innovation class. Demonstrated knowledge of all sides from problem definition through solution/idea generation to prototyping. Demonstrated knowledge of regulatory reimbursement and intellectual property issues that accompany the device landscape and potential business opportunities.</div>
         <div class="project-skills">Skills: R&D</div>
+      </div>
+
+      <!-- New Project Spring 2025 -->
+      <div class="project-box">
+        <div class="project-title">Breast Cancer AI Tumor Stage Classification & Survival/Treatment Recommendations</div>
+        <div class="project-media">
+          <img src="Project%20Media/tumorClassification.svg" alt="Tumor Classification Graphs">
+          <img src="Project%20Media/tumorSurvival.svg" alt="Treatment Survival Graphs">
+        </div>
+        <div class="project-date">Spring 2025</div>
+        <div class="project-description">
+          <strong>Figure 1:</strong> Performance of the tumor stage prediction model. It includes feature importance rankings (top left), the normalized confusion matrix (top right), precision-recall curves by tumor stage (bottom left), and evaluation metrics including accuracy, log loss, classification report, and average precision scores (bottom right).<br>
+          <strong>Figure 2:</strong> Predicted 15-year survival outcomes under every treatment combination of chemotherapy, radiotherapy, hormone therapy, and surgical type. It includes overall and stage-specific treatment recommendations (top and middle panels), predictions for a simulated patient (bottom left), and evaluation metrics, disclaimers, and future directions (bottom right).
+        </div>
+        <div class="project-description">
+          This project applies supervised learning and survival modeling to predict breast cancer tumor stage and provide treatment recommendations based on long-term survival outcomes using data from 
+          <a href="https://www.kaggle.com/datasets/raghadalharbi/breast-cancer-gene-expression-profiles-metabric" target="_blank" rel="noopener noreferrer">Breast Cancer Gene Expression Profiles (METABRIC)</a>. 
+          An XGBoost classifier was trained to predict tumor stage, while a Random Survival Forest estimated survival probabilities across treatment combinations. These models were then used to simulate predictions for a new patient to determine the optimal treatment path based on 15-year survival.
+        </div>
+        <div class="project-skills">
+          Python (XGBoost, Random Survival Forests, Scikit-learn, Survival Analysis, Custom Patient Simulation, SHAP Explainability, Data Preprocessing, Matplotlib)
+        </div>
       </div>
 
       <!-- New Project Fall 2024 -->
