--- a/Projects.html
+++ b/Projects.html
@@ -244,6 +244,26 @@
         </div>
       </div>
 
+      <!-- New Project Spring 2025 -->
+      <div class="project-box">
+        <div class="project-title">Blood Smear Multilabel Cell Detection Model </div>
+        <div class="project-media">
+          <img src="Project%20Media/MalariaImage.svg" alt="Multilabel Detection Model Results">
+        </div>
+        <div class="project-date">Spring 2025</div>
+        <div class="project-description">
+          <strong>Figure 1:</strong> Model bounding box predictions w/ confidence (top left), ground-truth doctor-annotated image (top right), precision-recall curves by cell class (bottom left), and image cell counts with a text table of model test results (bottom right).<br>
+        </div>
+        <div class="project-description">
+          This automated PyTorch Ultralytics YOLOv8 model detects and classifies cell types in 
+          <a href="https://www.kaggle.com/datasets/kmader/malaria-bounding-boxes" target="_blank" rel="noopener noreferrer">microscopic blood smear images for malaria diagnosis</a>. 
+          With red blood cells comprising over 95% of the data, the project explored addressing class imbalance using PyTorch Copy-Paste Augmentation, a minority class-prioritized scoring function, and class weighting in the loss function. Model performance is evaluated by comparing class-specific detection counts and predicted bounding box images versus the doctor-annotated ground truth, showcasing the performance and front-end prediction capability.
+        </div>
+        <div class="project-skills">
+          Python/Computer Vision (PyTorch, Ultralytics YOLOv8, Image Preprocessing, Copy-Paste Augmentation, JSON/YAML Annotation Parsing, Class Distribution Analysis, Object Detection, Bounding Box Localization)
+        </div>
+      </div>
+
       <!-- New Project Fall 2024 -->
       <div class="project-box">
         <div class="project-title">Polypharmacy Adverse Event Risk Model</div>
