--- a/Projects.html
+++ b/Projects.html
@@ -182,7 +182,6 @@
           Python (Scikit-learn, Machine Learning, Data Preprocessing, Fairness & Bias Auditing, Hyperparameter Tuning (Optuna), Model Calibration, Threshold Optimization, SHAP Explainability, Visualization (Matplotlib), Reproducibility (Joblib, Pipeline Design))
         </div>
       </div>
-     
 
       <!-- Project 3 -->
       <div class="project-box">
@@ -208,9 +207,22 @@
           Led a psychiatry-independent research experiment on sex-divergent and genotypic effects during neurodevelopment on Bloc-1 deficient Pallid mice. 
           Responsible for all sides of the project from behavioral experimentation to data analysis to scientific writing.
         </div>
-        <div class="project-skills">Skills: R&D</div>
+        <div class="project-skills">Skills: R&D, Data Analysis & Statistics, Experimental Design</div>
       </div>
 
+      <!-- New Project - Fall 2025 -->
+      <div class="project-box">
+        <div class="project-title">Robotic Steerable Catheter</div>
+        <div class="project-media">
+          <iframe src="https://youtube.com/shorts/uux3lw7Fgsw?feature=share" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="project-date">Fall 2025</div>
+        <div class="project-description">
+        A robotic pull-wire catheter system with wireless Bluetooth control and threaded Python scripts to drive a DC motor (forward/reverse) and a dual-servo gimbal for steerable navigation.
+        </div>
+        <div class="project-skills">Skills: Robotics, Microcontrollers, Mechatronics, Python (Threading, Bluetooth), CAD, R&D</div>
+      </div>
+        
       <!-- Project 4 -->
       <div class="project-box">
         <div class="project-title">Endotracheal Intubation Ideation</div>
@@ -219,7 +231,7 @@
         </div>
         <div class="project-date">Fall 2022</div>
         <div class="project-description">Designed a novel Endotracheal Intubation biomedical device in Columbia Biomedical Innovation class. Demonstrated knowledge of all sides from problem definition through solution/idea generation to prototyping. Demonstrated knowledge of regulatory reimbursement and intellectual property issues that accompany the device landscape and potential business opportunities.</div>
-        <div class="project-skills">Skills: R&D</div>
+        <div class="project-skills">Skills: R&D, CAD (SOLIDWORKS), Design Control</div>
       </div>
 
       <!-- New Project Spring 2025 -->
@@ -248,7 +260,7 @@
       <div class="project-box">
         <div class="project-title">Blood Smear Multilabel Cell Detection Model </div>
         <div class="project-media">
-          <img src="Project%20Media/MalariaImage.svg" alt="Multilabel Detection Model Results">
+          <img src="Project%20Media/MalariaImage.png" alt="Multilabel Detection Model Results">
         </div>
         <div class="project-date">Spring 2025</div>
         <div class="project-description">
@@ -279,7 +291,7 @@
             Further work has included integrating real-time pharmacological data from three APIs and five datasets for improved accuracy while leveraging SHAP values for instance-level explanations 
             (i.e. input: list of drugs; output: ‘30% risk of liver toxicity due to shared target pathway’).
         </div>
-        <div class="project-skills">Skills: Python</div>
+        <div class="project-skills">Skills: Python (Catboost)</div>
       </div>
 
       <!-- New Project Winter 2025 -->
