--- a/Projects.html
+++ b/Projects.html
@@ -125,6 +125,7 @@
   </header>
 
   <div class="container">
+    <!-- Project 1 -->
     <h1 class="page-title">Project List</h1>
     <div class="project-list">
       <!-- Project 1 -->
@@ -214,7 +215,7 @@
       <div class="project-box">
         <div class="project-title">Robotic Steerable Catheter</div>
         <div class="project-media">
-          <iframe src="https://youtube.com/shorts/uux3lw7Fgsw?feature=share" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/shorts/uux3lw7Fgsw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="project-date">Fall 2025</div>
         <div class="project-description">
