--- a/Projects.html
+++ b/Projects.html
@@ -215,7 +215,12 @@
       <div class="project-box">
         <div class="project-title">Robotic Steerable Catheter</div>
         <div class="project-media">
-          <iframe src="https://www.youtube.com/shorts/uux3lw7Fgsw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe 
+              src="https://www.youtube.com/embed/uux3lw7Fgsw" 
+              frameborder="0" 
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen>
+            </iframe>
         </div>
         <div class="project-date">Fall 2025</div>
         <div class="project-description">
