--- a/Projects.html
+++ b/Projects.html
@@ -118,7 +118,6 @@
         <li><a href="./about">About</a></li>
         <li><a href="./Resume">Resume</a></li>
         <li><a href="./Projects">Projects</a></li>
-        <li><a href="./Reading">Reading List</a></li>
         <li><a href="./Contact">Contact</a></li>
         </ul>
     </nav>
@@ -215,6 +214,8 @@
       <div class="project-box">
         <div class="project-title">Robotic Steerable Catheter</div>
         <div class="project-media">
+          <img src="Project%20Media/catheter1.svg" alt="Catheter CAD Overview">
+          <img src="Project%20Media/catheter2.svg" alt="Catheter CAD Parts">
           <iframe 
               src="https://www.youtube.com/embed/uux3lw7Fgsw" 
               frameborder="0" 
