--- a/Projects.html
+++ b/Projects.html
@@ -225,7 +225,7 @@
         </div>
         <div class="project-date">Fall 2025</div>
         <div class="project-description">
-        A robotic pull-wire catheter system with wireless Bluetooth control and threaded Python scripts to drive a DC motor (forward/reverse) and a dual-servo gimbal for steerable navigation.
+        A robotic pull-wire catheter system with wireless Bluetooth control and threaded Python scripts to drive a DC motor (forward/reverse) and a dual-servo gimbal for steerable navigation. Includes a manually actuated CAD model of the catheter for mechanical design demonstration.
         </div>
         <div class="project-skills">Skills: Robotics, Microcontrollers, Mechatronics, Python (Threading, Bluetooth), CAD, R&D</div>
       </div>
