--- a/Projects.html
+++ b/Projects.html
@@ -124,18 +124,18 @@
   </header>
 
   <div class="container">
-    <!-- Project 1 -->
     <h1 class="page-title">Project List</h1>
     <div class="project-list">
+      
       <!-- Project 1 -->
       <div class="project-box">
-        <div class="project-title">StarWalker - Bipedal Robot</div>
+        <div class="project-title">Robotic Arm ROS 2</div>
         <div class="project-media">
-          <iframe src="https://www.youtube.com/embed/rTbn90tQsiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://youtu.be/3hsTJVOnem8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <div class="project-date">Spring 2024</div>
-        <div class="project-description">A bipedal fire-shooting robot designed and built for Columbia University Robotics Studio.</div>
-        <div class="project-skills">Skills: 3D printing, Robotics, CAD, Electronics, Matlab, Python, R&D</div>
+        <div class="project-date">Fall 2025</div>
+        <div class="project-description">5-DOF robotic arm developed on a ROS 2 Jazzy architecture, integrating MoveIt 2 for path planning and validated through dynamic simulation in Gazebo with visualization in RViz 2. The system uses a custom ROS 2 controller generating torque commands aligned with real motor and link dynamics, deployed on a Raspberry Pi for real-time actuation and encoder-based PID control.</div>
+        <div class="project-skills">Skills: 3D printing, Robotics, CAD, Mechatronics, Python, ROS 2, Rviz 2, Gazebo, MoveIt 2, C++, R&D</div>
       </div>
 
       <!-- Project 2 -->
@@ -181,6 +181,17 @@
         <div class="project-skills">
           Python (Scikit-learn, Machine Learning, Data Preprocessing, Fairness & Bias Auditing, Hyperparameter Tuning (Optuna), Model Calibration, Threshold Optimization, SHAP Explainability, Visualization (Matplotlib), Reproducibility (Joblib, Pipeline Design))
         </div>
+      </div>
+
+      <!-- Project 1 Moved Down-->
+      <div class="project-box">
+        <div class="project-title">StarWalker - Bipedal Robot</div>
+        <div class="project-media">
+          <iframe src="https://www.youtube.com/embed/rTbn90tQsiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="project-date">Spring 2024</div>
+        <div class="project-description">A bipedal fire-shooting robot designed and built for Columbia University Robotics Studio.</div>
+        <div class="project-skills">Skills: 3D printing, Robotics, CAD, Electronics, Matlab, Python, R&D</div>
       </div>
 
       <!-- Project 3 -->
