--- a/Projects.html
+++ b/Projects.html
@@ -131,10 +131,10 @@
       <div class="project-box">
         <div class="project-title">Robotic Arm ROS 2</div>
         <div class="project-media">
-          <iframe src="https://youtu.be/3hsTJVOnem8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/3hsTJVOnem8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="project-date">Fall 2025</div>
-        <div class="project-description">5-DOF robotic arm developed on a ROS 2 Jazzy architecture, integrating MoveIt 2 for path planning and validated through dynamic simulation in Gazebo with visualization in RViz 2. The system uses a custom ROS 2 controller generating torque commands aligned with real motor and link dynamics, deployed on a Raspberry Pi for real-time actuation and encoder-based PID control.</div>
+        <div class="project-description">5-DOF robotic arm developed on a ROS 2 Jazzy architecture, integrating MoveIt 2 for path planning and validated through dynamic physics-based simulation in Gazebo with visualization in RViz 2. The system uses a custom ROS 2 controller producing position commands consistent with real motor torques and link dynamics, deployed on a Raspberry Pi for real-time actuation and encoder-based PID control.</div>
         <div class="project-skills">Skills: 3D printing, Robotics, CAD, Mechatronics, Python, ROS 2, Rviz 2, Gazebo, MoveIt 2, C++, R&D</div>
       </div>
 
