--- a/Projects.html
+++ b/Projects.html
@@ -131,6 +131,7 @@
       <div class="project-box">
         <div class="project-title">Robotic Arm ROS 2</div>
         <div class="project-media">
+          <img src="Project%20Media/RosRobotArmArch.svg" alt="Ros2 Robot Arm Architecture Flow">
           <iframe src="https://www.youtube.com/embed/3hsTJVOnem8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="project-date">Fall 2025</div>
