--- a/Projects.html
+++ b/Projects.html
@@ -127,7 +127,7 @@
     <h1 class="page-title">Project List</h1>
     <div class="project-list">
       
-      <!-- Project 1 -->
+      <!-- Project Robotic Arm ROS 2 -->
       <div class="project-box">
         <div class="project-title">Robotic Arm ROS 2</div>
         <div class="project-media">
@@ -139,7 +139,7 @@
         <div class="project-skills">Skills: 3D printing, Robotics, CAD, Mechatronics, Python, ROS 2, Rviz 2, Gazebo, MoveIt 2, C++, R&D</div>
       </div>
 
-      <!-- Project 2 -->
+      <!-- Project Web Scraping Medical Device Landscape -->
       <div class="project-box">
         <div class="project-title">Web Scraping Medical Device Landscape</div>
         <div class="project-media">
@@ -153,7 +153,7 @@
         <div class="project-skills">Skills: Python (Tkinter, Selenium, BeautifulSoup, Pandas, Matplotlib, Threading)</div>
       </div>
 
-      <!-- New Project Winter 2025 -->
+      <!-- Project Cardiovascular Disease Prediction AI Classification -->
       <div class="project-box">
         <div class="project-title">Cardiovascular Disease Prediction AI Classification</div>
         <div class="project-media">
@@ -184,7 +184,19 @@
         </div>
       </div>
 
-      <!-- Project 1 Moved Down-->
+      <!-- Project Motion Planning and Control for Catheter Navigation -->
+      <div class="project-box">
+        <div class="project-title">Motion Planning and Control for Catheter Navigation</div>
+        <div class="project-media">
+          <img src="Project%20Media/brainMazeMap.png" alt="Brain Maze Map Image">
+          <iframe src="https://www.youtube.com/embed/kWnJaRissG8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="project-date">Winter 2025</div>
+        <div class="project-description">Complete motion planning and real-time control solution for a catheter-like robot. An A* search is applied to a signed distance field to ensure collision-free, central navigation within constrained vasculature. B-spline smoothing is utilized to generate a continuous trajectory. A coupled, time-optimal motion profile is then computed to ensure linear and rotational motor commands respect strict velocity and acceleration constraints, maximizing speed while maintaining synchronized execution.</div>
+        <div class="project-skills">Skills: Python, R&D, Robotics</div>
+      </div>
+
+      <!-- Project StarWalker - Bipedal Robot-->
       <div class="project-box">
         <div class="project-title">StarWalker - Bipedal Robot</div>
         <div class="project-media">
@@ -195,7 +207,7 @@
         <div class="project-skills">Skills: 3D printing, Robotics, CAD, Electronics, Matlab, Python, R&D</div>
       </div>
 
-      <!-- Project 3 -->
+      <!-- Project UCLA Honors Physiology Research -->
       <div class="project-box">
         <div class="project-title">UCLA Honors Physiology Research</div>
         <div class="project-media">
@@ -222,7 +234,7 @@
         <div class="project-skills">Skills: R&D, Data Analysis & Statistics, Experimental Design</div>
       </div>
 
-      <!-- New Project - Fall 2025 -->
+      <!-- Project Robotic Steerable Catheter -->
       <div class="project-box">
         <div class="project-title">Robotic Steerable Catheter</div>
         <div class="project-media">
@@ -242,7 +254,7 @@
         <div class="project-skills">Skills: Robotics, Microcontrollers, Mechatronics, Python (Threading, Bluetooth), CAD, R&D</div>
       </div>
         
-      <!-- Project 4 -->
+      <!-- Project Endotracheal Intubation Ideation -->
       <div class="project-box">
         <div class="project-title">Endotracheal Intubation Ideation</div>
         <div class="project-media">
@@ -253,7 +265,7 @@
         <div class="project-skills">Skills: R&D, CAD (SOLIDWORKS), Design Control</div>
       </div>
 
-      <!-- New Project Spring 2025 -->
+      <!-- Project Breast Cancer AI Tumor Stage Classification & Survival/Treatment Recommendations -->
       <div class="project-box">
         <div class="project-title">Breast Cancer AI Tumor Stage Classification & Survival/Treatment Recommendations</div>
         <div class="project-media">
@@ -275,9 +287,9 @@
         </div>
       </div>
 
-      <!-- New Project Spring 2025 -->
+      <!-- Project Blood Smear Multilabel Cell Detection Model -->
       <div class="project-box">
-        <div class="project-title">Blood Smear Multilabel Cell Detection Model </div>
+        <div class="project-title">Blood Smear Multilabel Cell Detection Model</div>
         <div class="project-media">
           <img src="Project%20Media/MalariaImage.png" alt="Multilabel Detection Model Results">
         </div>
@@ -295,7 +307,7 @@
         </div>
       </div>
 
-      <!-- New Project Fall 2024 -->
+      <!-- Project Polypharmacy Adverse Event Risk Model -->
       <div class="project-box">
         <div class="project-title">Polypharmacy Adverse Event Risk Model</div>
         <div class="project-media">
@@ -313,7 +325,7 @@
         <div class="project-skills">Skills: Python (Catboost)</div>
       </div>
 
-      <!-- New Project Winter 2025 -->
+      <!-- Project 3D Printed Dremel CNC/Laser Engraver -->
       <div class="project-box">
         <div class="project-title">3D Printed Dremel CNC/Laser Engraver</div>
         <div class="project-media">
@@ -330,7 +342,7 @@
         <div class="project-skills">Skills: 3D printing, Robotics, CAD/CAM, Electronics</div>
       </div>
 
-      <!-- Project 5 -->
+      <!-- Project 3D Printer Build -->
       <div class="project-box">
         <div class="project-title">3D Printer Build</div>
         <div class="project-media">
@@ -341,7 +353,7 @@
         <div class="project-skills">Skills: 3D printing, Electronics</div>
       </div>
 
-      <!-- Project 6 -->
+      <!-- Project UCLA Bruin Young Tech Professionals Bootcamp -->
       <div class="project-box">
         <div class="project-title">UCLA Bruin Young Tech Professionals Bootcamp</div>
         <div class="project-media">
@@ -352,7 +364,7 @@
         <div class="project-skills">Skills: R&D</div>
       </div>
 
-      <!-- Project 7 -->
+      <!-- Project Columbia Mechatronics Class -->
       <div class="project-box">
         <div class="project-title">Columbia Mechatronics Class</div>
         <div class="project-media">
@@ -363,7 +375,7 @@
         <div class="project-skills">Skills: Robotics, Electronics, C++</div>
       </div>
 
-      <!-- Project 8 -->
+      <!-- Project Columbia Computational Physiology Class -->
       <div class="project-box">
         <div class="project-title">Columbia Computational Physiology Class</div>
         <div class="project-media">
@@ -374,7 +386,7 @@
         <div class="project-skills">Skills: Matlab, Python</div>
       </div>
 
-      <!-- Project 9 -->
+      <!-- Project Retinal Microneedle Commercialization Plan -->
       <div class="project-box">
         <div class="project-title">Retinal Microneedle Commercialization Plan</div>
         <div class="project-media">
@@ -385,7 +397,7 @@
         <div class="project-skills">Skills: R&D</div>
       </div>
 
-      <!-- Project 10 -->
+      <!-- Project 3D-printed Vinyl Shelves -->
       <div class="project-box">
         <div class="project-title">3D-printed Vinyl Shelves</div>
         <div class="project-media">
@@ -396,7 +408,7 @@
         <div class="project-skills">Skills: 3D printing, CAD</div>
       </div>
 
-      <!-- Project 11 -->
+      <!-- Project Noble Ninja App -->
       <div class="project-box">
           <div class="project-title">Noble Ninja App</div>
           <div class="project-media">
@@ -407,7 +419,7 @@
           <div class="project-skills">Skills: Swift</div>
       </div>
 
-      <!-- Project 12 -->
+      <!-- Project ‘Believe’ Stitch Pattern -->
       <div class="project-box">
         <div class="project-title">‘Believe’ Stitch Pattern</div>
         <div class="project-media">
@@ -418,7 +430,7 @@
         <div class="project-skills">Skills: Electronics, Matlab</div>
       </div>
 
-      <!-- Project 13 -->
+      <!-- Project Desk and Chair Topology Optimization -->
       <div class="project-box">
         <div class="project-title">Desk and Chair Topology Optimization</div>
         <div class="project-media">
@@ -429,7 +441,7 @@
         <div class="project-skills">Skills: CAD</div>
       </div>
 
-      <!-- Project 14 -->
+      <!-- Project Laser Cut Desk Organizer -->
       <div class="project-box">
         <div class="project-title">Laser Cut Desk Organizer</div>
         <div class="project-media">
