--- a/Projects.html
+++ b/Projects.html
@@ -133,6 +133,7 @@
         <div class="project-media">
           <img src="Project%20Media/RosRobotArmArch.svg" alt="Ros2 Robot Arm Architecture Flow">
           <iframe src="https://www.youtube.com/embed/3hsTJVOnem8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/bB-WkaypxTI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="project-date">Fall 2025</div>
         <div class="project-description">5-DOF robotic arm developed on a ROS 2 Jazzy architecture, integrating MoveIt 2 for path planning and validated through dynamic physics-based simulation in Gazebo with visualization in RViz 2. The system uses a custom ROS 2 controller producing position commands consistent with real motor torques and link dynamics, deployed on a Raspberry Pi for real-time actuation and encoder-based PID control.</div>
